--- a/submission_7/football_DA.tex
+++ b/submission_7/football_DA.tex
@@ -143,7 +143,7 @@ The link between sporting events and domestic abuse has been the focus of a numb
 %Two studies have investigated the effect of England's participation in the World Cup on the number of reported domestic abuse incidents. Using data on the number of reported domestic abuse cases in the month of the 2010 World Cup tournament, one study has found that the number of reported domestic abuse cases increased significantly when England lost or won (about 33-35\%), but did not change on days when they drew \cite{Brimicombe2012}. Another study has used daily count data from the 2002, 2006 and 2010 World Cups, and found a 38\% increase in the number of reported domestic violence cases when the England team lost, and a 26\% increase when they won or drew \cite{Kirby2014}. These figures were also quoted in a poster campaign launched before the 2018 World Cup, aiming to raise awareness of the link between football and domestic abuse \cite{NCDV}. While domestic abuse is predominantly understood as a pattern of ongoing behaviour involving a series of occurrences, rather than a one-off incident triggered by football \cite{Brooks-Hay2018}, these studies, and other qualitative investigations \cite{Swallow} nevertheless suggest that national football tournaments can create an environment for abusers that is conducive to domestic abuse.
 
 
-Why would national football tournaments, such as the World Cup or the European Championship precipitate domestic abuse? England's participation in these tournaments are times of heightened patriotic emotions and a strengthened sense of ``Englishness'', fuelled by media narratives that often use war references, and a ``us vs. them'' rhetoric to generate and represent an English national identity \cite{Vincent2014}. Previous qualitative research has suggested that televised contact sports can serve as vehicle for the male sports fan to redefine, and express his masculinity in a way that allows dominance, control, and can ultimately manifest in the perpetration of domestic abuse \cite{Sabo,Swallow}, given susceptibility to such behaviours. We speculate that this observation is especially pertinent in the context of England's participation in national football tournaments, owing to the popularity of the sport in the country, the associated media attention, and the resulting heightened sense of national consciousness. \AT{Not sure if it would be worth adding something on the link between nationalism and masculinity?}
+Why would national football tournaments, such as the World Cup or the European Championship precipitate domestic abuse? England's participation in these tournaments are times of heightened patriotic emotions and a strengthened sense of ``Englishness'', fuelled by media narratives that often use war references, and a ``us vs. them'' rhetoric to generate and represent an English national identity \cite{Vincent2014}. Previous qualitative research has suggested that televised contact sports can serve as vehicle for the male sports fan to redefine, and express his masculinity in a way that allows dominance, control, and can ultimately manifest in the perpetration of domestic abuse \cite{Sabo,Swallow}, given susceptibility to such behaviours. We speculate that this observation is especially pertinent in the context of England's participation in national football tournaments, owing to the popularity of the sport in the country, the associated media attention, and the resulting heightened sense of national consciousness. \AT{Not sure if it would be worth adding something on the link between nationalism and masculinity? It would be good to offer a story for potential pathways whilst avoiding having to say something strong which can be attacked}
 
 
 Previous studies found a strong link between alcohol and domestic abuse, suggesting that alcohol can either be seen as a contributing cause, an aggravating factor, or a trigger of violent behaviour in domestic (and other) settings \cite{Leonard2017}. The ecological model of intimate partner violence (IPV; the most common form of domestic abuse) sees IPV as a product of societal, community, relationship, and individual influences. From a community perspective, \cite{Graham2017} argue that social contexts where excessive drinking is encouraged (e.g., through the promotion of alcohol during sporting events) are often permissive of violent behaviour and sexism, which can increase the likelihood of alcohol-related domestic abuse. However, strong inhibitory factors (e.g., social norms, and more specifically the condemnation of peers) can offset the disinhibitory effect of alcohol consumption, and reduce the likelihood of subsequent perpetration.  
@@ -167,21 +167,21 @@ To test this hypothesis, we investigate whether the daily number of reported alc
 
 Our dataset comprises all incidents and crimes recorded by the West Midlands Police (WMP) in the period between January 1, 2010 and October 10, 2019 (3570 days). The WMP is the third largest police force in England \cite{Homeoffice}, serving an area with a population over 2.9 million in 2018 \cite{populationfigure}. 
 
-The WMP records all reported cases in two databases: incidents and crimes. Most reported cases will be initially recorded as incidents (and then later might be also recorded as a crime after investigation), with a smaller fraction immediately recorded as crimes (if it is clear that it meets the criteria for notifiable offences, \citeNP{HomeOffice2019}). For this reason, some recorded crimes will have matching incident entries, while others will not. As an exception, specific types of reported cases (e.g., rape, domestic abuse, child abuse, racially or religiously aggravated cases) that do not qualify as a crime after being investigated (e.g., due to lack of evidence), still get recorded in the crimes database with the indicator ``non crime'' (e.g., ``domestic violence incident - non crime'').
+The WMP records all reported cases in two databases: incidents and crimes. Most reported cases will be initially recorded as an incident (and then later might be also recorded as a crime after investigation), with a smaller fraction immediately recorded as crime (if it is clear that it meets the criteria for notifiable offences, \citeNP{HomeOffice2019}). For this reason, some recorded crimes will have matching incident entries, while others will not. As an exception, specific types of reported cases (e.g., rape, domestic abuse, child abuse, racially or religiously aggravated cases) that do not qualify as a crime after being investigated (e.g., due to lack of evidence), still get recorded in the crimes database with the indicator ``non crime'' (e.g., ``domestic violence incident - non crime'').
 
 
-The incidents dataset contains markers capturing various key aspects of the reported case (e.g., domestic abuse, alcohol, drugs, mental health, etc.; \citeNP{HomeOffice2011}) recorded in the call centre. These markers are used to assess the severity of case (and support the decision as to whether police attendance is required). In contrast, each case in the crimes dataset had been attended by the police, and therefore contains detailed information about the offence that took place, the gender, age, and ethnicity of the victim and offender, and the location and exact time of the crime.
+The incidents dataset contains a list of markers capturing various key aspects of the reported case, which are recorded in the call centre when the case is being reported. Most of these markers are common across police forces in England (e.g., domestic abuse, alcohol, drugs, mental health, etc.; \citeNP{HomeOffice2011}). These then could be used to assess the severity of case (and support the decision as to whether police attendance is required). In contrast, each case in the crimes dataset had been attended by the police, and therefore contains detailed information about the offence that took place, the gender, age, and ethnicity of the victim and offender, and the location and exact time of the crime (the time of the first and last instance of the perpetrated case, as well as the time of reporting is recorded to the minute \AT{not sure if this grammatically correct}). A separate alcohol marker exists in the crimes dataset.
 
-Given that much more information are recorded about crimes than incidents, we decided to restrict our analysis to entries in the crimes dataset (i.e., cases that have been investigated by the police), and use only matching entries from the incidents dataset (if any), which provide additional useful call centre-recorded markers about the nature of each crime. This allows us to identify if a recorded serious crime (e.g., grievous bodily harm) was domestic abuse-related. However, our main results do not change if we only use information contained in the crimes dataset or include both all crimes and incidents in the analysis.   
+Given that much more information are recorded about crimes than incidents, we decided to restrict our analysis to entries in the crimes dataset (i.e., cases that have been investigated by the police), and use only matching entries from the incidents dataset (if any), which provide additional useful call centre-recorded information about the nature of each case. This allows us to identify if a recorded serious crime (e.g., grievous bodily harm) was domestic abuse-related. However, our main results do not change if we only use information contained in the crimes dataset (i.e., domestic abuse cases that after investigated, did not qualify as a crime) or include both crimes and incidents in the analysis (i.e., domestic abuse cases that had been investigated and suspected domestic abuse cases that had not been investigated).   
 
 We coded each reported case as domestic abuse-related if (1) in the crime dataset the offence description explicitly stated so (either ``domestic violence incident'' or ``coercive/controlling behaviour in a domestic setting'') or (2) one of the linked incident markers (if any) stated ``domestic violence''. This method ensured that we used all information available to us to identify domestic-abuse related cases. The role of the victim and the offender was determined by the police. 
 
-To determine whether a case was alcohol-related, we again collated information from various markers and created an alcohol flag if any of these markers contained ``alcohol''. The main source of information on alcohol-involvement is the crime dataset, where the recording officer has to choose either ``Yes'' or ``No'' to indicate whether the case was alcohol-related. According to the Home Office Counting Rules for Recorded Crime, alcohol-related crimes are defined as ``any notifiable offence (crime) where it is perceived, by the victim or any other person, that the
-effects of alcohol consumption on the offender or victim was an aggravating factor'' \citeNP{Office2019}. Unfortunately, it is not recorded in our dataset whether who was under the influence of alcohol (victim, offender, or both). In addition, this flag might be an underestimation of the true number of alcohol-related cases, as one could reasonably expect it to be more likely that ``No'' will be selected for an alcohol-related case than the other way around, due to human error.
+To determine whether a case was alcohol-related, we again collated information from markers found in the incidents and crimes dataset and created an alcohol flag if any of these markers contained the word ``alcohol''. The main source of information on alcohol-involvement is the crime dataset, where the recording officer has to choose either ``Yes'' or ``No'' to indicate whether the case was alcohol-related. According to the Home Office Counting Rules for Recorded Crime, alcohol-related crimes are defined as ``any notifiable offence (crime) where it is perceived, by the victim or any other person, that the
+effects of alcohol consumption on the offender or victim was an aggravating factor'' \cite{Office2019}. Unfortunately, it is not specified who was under the influence of alcohol (victim, offender, or both). In addition, it is possible that this flag is an underestimation of the true number of alcohol-related cases, as one could reasonably expect it to be more likely that ``No'' will be selected for an alcohol-related case than the other way around, due to human error.
 
- Overall there were 427,351 reported cases of domestic abuse in this 10-year period, comprising 17\% of all recorded crimes and incidents in the dataset. Of these cases, 26\% were alcohol-related (in contrast, only 9\% of non domestic abuse cases are alcohol-related). In the period between 2010 and 2018, the daily rate of non-alcohol related domestic incidents falls between 1.42--3.95 cases per 100,000 individuals, whereas the daily rate of alcohol-related cases falls between 0.84--1.67 cases per 100,000 individuals (the overall rate falls between 2.4 and 5.01 per 100,000 individuals). 
+ Overall there were 427,351 reported cases of domestic abuse in this 10-year period, comprising 17\% of all recorded crimes and incidents. Of these cases, 26\% were alcohol-related (in contrast, only 9\% of non domestic abuse cases are alcohol-related). In the period between 2010 and 2018, the daily rate of non-alcohol related domestic incidents falls between 1.42--3.95 cases per 100,000 individuals, whereas the daily rate of alcohol-related cases falls between 0.84--1.67 cases per 100,000 individuals (the overall rate falls between 2.4 and 5.01 per 100,000 individuals). 
 
-Figure \ref{fig:descriptive} shows the daily average number of alcohol and non-alcohol related domestic abuse cases reported to WMP by day of the week. The reported number of domestic abuse cases, and particularly alcohol-related cases show strong variation throughout the week, with generally fewer reported cases mid-week, and a pronounced increase over the weekend. 
+Figure \ref{fig:descriptive} shows the daily average number of alcohol and non-alcohol related domestic abuse cases reported to WMP by day of the week. The reported number of domestic abuse cases, and particularly alcohol-related cases shows strong variation throughout the week, with generally fewer reported cases mid-week, and a pronounced increase over the weekend. 
 
 \begin{figure} 
 \begin{center} 
@@ -199,10 +199,10 @@ Our dataset contains all cases of domestic abuse that have been reported to the 
  
 \begin{table}[!htbp]
 \centering
-    \caption{Matches played by the English national football team in the World Cup and European Championship tournaments between 2010 and 2019.}
+    \caption{Matches of the English national football team in the World Cup and European Championship tournaments between 2010 and 2019, by outcome.}
 \begin{tabular}{ccccc}
   \hline
-\textbf{Date} & \textbf{Other Team} & \textbf{Tournament} & \textbf{Year} & \textbf{Result} \\ 
+\textbf{Date} & \textbf{Other Team} & \textbf{Tournament} & \textbf{Year} & \textbf{Outcome} \\ 
   \hline
 2010-06-12 & USA & World Cup & 2010 & England draw \\ 
   2010-06-18 & Algeria & World Cup & 2010 & England draw \\ 
@@ -236,11 +236,14 @@ Table \ref{Tab:matches} shows the matches of the English national football team 
 
 \section{Methods}
 
+To investigate the role alcohol plays in the link between England football matches and domestic abuse, we used a regression framework. Our main results are derived from Poisson and Negative Binomial regressions, where each observation is a day or a three-hour interval in the period between 2010 and 2019, and the outcome variable is the number of cases perpetrated in an observation period. To investigate certain characteristics of the domestic abuse cases perpetrated on England match days, we also used a logistic regression framework. Below is a detailed explanation of the statistical models used in our analyses.  
+
+
 \subsection{Count per day analyses} 
 \label{modelsexplained}
 
 
-To investigate the link between matches of the England football team and the number of domestic abuse cases perpetrated on these days, we use a regression framework, where each day in our dataset is an observation (of which there are 3570), and the outcome variable is the number of domestic abuse cases perpetrated on that day (alcohol-related or not). We classified each day in this period as one of the following: England won (England win, $N = 8$), lost (England lost, $N = 8$) or drew (England draw, $N = 6$), a day after an England match day (After England, $N = 22$), any other day during the months of the tournament (Tournament on, $N = 106$), or any other day during the rest of the year (Non-match day, $N = 3420$). Our aim is to understand the extent to which this classification variable can explain the number of cases reported to the police.
+In these regressions, each day in our dataset is an observation (of which there are 3570), and the outcome variable is the number of domestic abuse cases perpetrated on that day (alcohol-related or not). We classified each day in this period as one of the following: England won (England win, $N = 8$), lost (England lost, $N = 8$) or drew (England draw, $N = 6$), a day after an England match day (After England, $N = 22$), any other day during the months of the tournament (Tournament on, $N = 106$), or any other day during the rest of the year (Non-match day, $N = 3420$). Our aim is to understand the extent to which this classification variable can explain the number of alcohol-related and non-alcohol related cases reported to the police.
 
 To control for potential confounders and account for the temporal variability of the number of domestic abuse cases, we also added a set of control variables, including day of the week, month, year, Christmas (covering the period between 24th and 26th of December) and New Year's Eve (1st of January). These holidays are consistently associated with an increased number of domestic abuse cases reported to the police, therefore including these will result in a more precise estimate of the association between football and domestic abuse.
 
@@ -256,17 +259,17 @@ $C_i \sim Pois(\lambda_i)$ or $C_i \sim Negative Binomial(\lambda_i\theta)$, \te
 
 In the Poisson framework, it is assumed that the mean of the distribution ($\lambda_i$) is equal to the variance. However, for certain types of count data, the observed variance can exceed the mean, causing overdispersion. If overdispersion is present in the data, the Poisson model understate the standard error of the estimates, leading to erroneous conclusions. Given the complex nature of domestic abuse, it is likely that our model will not able to fully account for all the factors influencing the number of reported cases on a given day, leading to unobserved heterogeneity and increasing the likelihood of overdispersion if using a Poisson model. Testing for overdispersion in a Poisson model involves testing the null-hypothesis of equidispersion (the mean being equal to the variance).
 
-If there is evidence for overdispersion, a negative binomial model is a more suitable modelling framework, as it includes an additional parameter $\theta$ to allow the variance to deviate from the mean. In the following analyses, we present results from negative binomial models, as we found evidence for overdispersion in all cases (after performing a test of overdispersion described in \citeNP{Cameron1990a}). All analyses were performed in R (version 3.6.2).
+If there is evidence for overdispersion, a negative binomial model is a more suitable modelling framework, as it includes an additional parameter $\theta$ to allow the variance to deviate from the mean. 
 
 
-\subsection{Three-hour analysis}
+\subsection{Count per three-hour interval analysis}
 
-In this analysis, we use the regression framework described in section \ref{modelsexplained} to investigate the temporal dynamics of the number of domestic abuse cases (alcohol-related or not) perpetrated before and after England matches. To this end, we divided each day in our dataset into eight three-hour periods, the first one starting at 12am, and used these to identify specific time windows around the time of the match (six and three hours before the match, during match, and three, six, twelve, and twenty-four hours after the match). The exact time of the matches vary considerably (the earliest starting at 1pm, and the latest at 11pm). We first identified the three-hour period of the day into which each match falls. If the start and end time of the match did not fall in the same three-hour period, we chose the three-hour period that covers the larger part of the match (e.g., a 2.5 hour long match starting at 7pm will be assigned to the 6-9pm period and not to the 9pm-12am period). In these regressions, each time window indicator is a dummy variable, therefore the exponentiated coefficients directly represent the relative change in the number of cases during these periods, compared to any other (overwhelmingly non-match) periods. To control for potential confounders, we controlled for year, month, day of week, three-hour period of the day, Christmas and New Year's Eve.
+In this analysis, we used the regression framework described in section \ref{modelsexplained} (either Poisson or negative binomial regression) to investigate the temporal dynamics of the number of domestic abuse cases (alcohol-related or not) perpetrated before and after England matches. To this end, we divided each day in our dataset into eight three-hour periods, the first one starting at 12am, and used these to identify specific time windows around the time of the match (six and three hours before the match, during match, and three, six, twelve, and twenty-four hours after the match). The exact time of the matches vary considerably (the earliest starting at 1pm, and the latest at 11pm). We first identified the three-hour period of the day into which each match falls. If the start and end time of the match did not fall in the same three-hour period, we chose the three-hour period that covers the larger part of the match (e.g., a 2.5 hour long match starting at 7pm will be assigned to the 6-9pm period and not to the 9pm-12am period). In these regressions, each time window indicator is a dummy variable, therefore the exponentiated coefficients directly represent the relative change in the number of cases during these periods, compared to any other (overwhelmingly non-match) periods. To control for potential confounders, we controlled for year, month, day of week, three-hour period of the day, Christmas and New Year's Eve.
 
 
-\subsection{Binary outcome variable analysis}
+\subsection{Binary outcome variable analyses}
 
-To further understand the characteristics of domestic abuse cases perpetrated on England football days, such as whether these cases are more likely to occur in a public location or end in serious injury, we use a logistic regression framework. Given a binary response variable ($Y_{i}$ can either take the value 0 or 1), we wish to model the probability of an event occurring, i.e., $\pi = P(Y = 1)$. In a logistic regression framework, we can model this probability as a function of predictor variables with the equation
+To further understand the characteristics of domestic abuse cases perpetrated on England football days, such as whether these cases are more likely to occur in a public location or end in serious injury, we used a logistic regression framework. Given a binary response variable ($Y_{i}$ can either take the value 0 or 1), we wish to model the probability of an event occurring, i.e., $\pi = P(Y = 1)$. In a logistic regression framework, we can model this probability as a function of predictor variables with the equation
 
 \begin{equation}
 log(\frac{\pi}{1-\pi})= \vect{x_i^{T}}\vect{\beta}
@@ -274,9 +277,19 @@ log(\frac{\pi}{1-\pi})= \vect{x_i^{T}}\vect{\beta}
 
 where \textbf{x\textsubscript{i}} is a vector of covariates, and $\boldsymbol{\beta}$ is the vector of coefficients.
 
+
+\newpage
+
 \section{Results}
 
+In the following count data analyses, we present results from negative binomial models, as we found evidence for overdispersion in all cases (after testing for overdispersion using the method described in \citeNP{Cameron1990a}). All analyses were performed in R (version 3.6.2).
+
+
 \subsection{Core results} 
+
+Table \ref{coremodel} shows the results from two negative binomial regressions investigating the link between football and domestic abuse by alcohol-involvement. For non alcohol-related cases, we find no evidence for an increase (or decrease) on days when the England football team plays, compared to non-match days. In contrast, we see a significant, 47\%, 95\% CI [26\%--71\%], increase in the number of alcohol-related cases on days when the England football team wins, compared to non-match days. We find no evidence for comparable increases in the number of reported domestic abuse cases when the England national team loses. Less surprising, and more consistent with previous findings is the lack of evidence for an increase on England draw days, probably due to the fact that high-stake matches after the group-stage in the tournament cannot result in a draw. In addition, we estimate that there is an 18\%, 95\% CI [7\%--30\%], increase in the number of alcohol-related cases reported after an England match day, which could be the result of a temporal spill-over effect from the previous match day. 
+
+
 \begin{table*}[!htbp] \centering 
   \begin{threeparttable}
   \caption{The effect of England football days on domestic abuse by alcohol-involvement, 2010-2019} 
@@ -324,7 +337,7 @@ Notes:
 \end{threeparttable} 
 \end{table*}
 
-Table \ref{coremodel} shows the results from two negative binomial regressions investigating the link between football and domestic abuse by alcohol-involvement. For non alcohol-related cases, we find no evidence for an increase (or decrease) on days when the England football team plays, compared to non-match days. In contrast, we see a significant, 47\%, 95\% CI [26\%--71\%], increase in the number of alcohol-related cases on days when the England football team wins, compared to non-match days. We find no evidence for comparable increases in the number of reported domestic abuse cases when the England national team loses. Less surprising, and more consistent with previous findings is the lack of evidence for an increase on England draw days, probably due to the fact that high-stake matches after the group-stage in the tournament cannot result in a draw. In addition, we estimate that there is an 18\%, 95\% CI [7\%--30\%], increase in the number of alcohol-related cases reported after an England match day, which could be the result of a temporal spill-over effect from the previous match day. 
+
 
 
 
@@ -338,14 +351,16 @@ Table \ref{coremodel} shows the results from two negative binomial regressions i
 		\floatfoot{Note: Estimates are from two separate negative binomial regressions with year, month, day of week, three-hour period of day, Christmas, New Year's eve controls. Shaded area is 95\% CIs.}
 \end{figure}
 
- To further understand the characteristics of this increase, we conducted a three-hour analysis to explore the finer temporal patterns in the number of domestic abuse cases (alcohol-related or not) perpetrated before and after an England match. Figure \ref{fig:threehours} shows a plot of the estimated percentage increase from these negative binomial regressions, revealing a stark increase in alcohol-related domestic abuse on days of an England victory, starting in the three hour period of the match, peaking in the three-hour period afterwards, and gradually declining to its original level in the twenty-four hours following the victory. 
+ To further understand the characteristics of this increase, we exploited the detailed time information in our dataset, which allowed us to conduct a three-hour analysis to explore the finer temporal patterns of domestic abuse cases (alcohol-related or not) perpetrated before and after an England match. Figure \ref{fig:threehours} shows a plot of the estimated percentage increase from these negative binomial regressions, revealing a stark increase in alcohol-related domestic abuse on days of an England victory, starting in the three hour period of the match, peaking in the three-hour period afterwards, and gradually declining to its original level in the twenty-four hours following the victory. While a similar pattern can be observed on days when England lost, the increase in the number of alcohol-related cases is substantially smaller and not statistically different from zero.
 
 \subsection{Other types of crimes and incidents}
 
-Our crime dataset further allows us to explore whether England games have similar effects on other types of criminal behaviours, apart from domestic abuse. Specifically, we are interested in how an England match day affects the number of reported property-related crimes (where the case is classified as theft or robbery), hate crimes (hate incidents or any other racially or religiously aggravated crime), and other violent crimes (where the case is classified as violence against the person, excluding cases of domestic abuse). Of particular interest is the effect of football on non-domestic violent crimes, since it is possible that alcohol-fuelled violence that follows an England victory is not limited to family and intimate partner relationships. 
+Our crime dataset further allows us to explore whether England games have similar effects on other types of criminal behaviours, apart from domestic abuse. Specifically, we are interested in how an England match day affects the number of reported property-related crimes (where the offence class is either theft or robbery), hate crimes (where the offence description includes the words ``hate'', ``racial'' or ``racially''), and other violent crimes (where the offence class is classified as violence against the person, after excluding cases of domestic abuse). Of particular interest is the effect of football on non-domestic violent crimes, since it is possible that alcohol-fuelled violence that follows an England victory is not limited to family and intimate partner relationships. 
+
+\AT{I think we should say something about how detecting alcohol-involvement varies by crime type- e.g., for domestic abuse we have greater confidence in identifying alcohol-related cases as opposed to property-related crimes}
 
 
-Table \ref{othercrimes} shows the results for these three types of criminal behaviours, by alcohol-involvement. Compared to non-match days, hate crimes and incidents with no alcohol-involvement increase by 12\%, 95\% CI [3\%--22\%], during the months of the tournaments. Similarly, compared to non-match days, alcohol-related thefts and robberies (property-related offences) increase by 10\%,95\% CI [1\%--19\%], when the tournament is on, and by 29\%, 95\% CI [0\%--66\%], although these estimates are not very precise (demonstrated by the width of the confidence intervals), due to the relatively small number of alcohol-related theft and robbery cases. In contrast, the effect of an England win on alcohol-related cases clearly extends to other, non-domestic violent offences, resulting in a 47\%, 95\% CI [19\%--83\%], increase compared to non-match days. While it is possible that misclassified domestic abuse cases contribute to this result (e.g, if the victim chooses not to disclose any relationship to the offender), these results suggests that the increase in alcohol-related violence following an England victory is not limited to domestic settings.
+Table \ref{othercrimes} shows the results for these three types of criminal behaviours, by alcohol-involvement. Compared to non-match days, hate crimes and incidents with no alcohol-involvement increase by 12\%, 95\% CI [3\%--22\%], during the months of the tournaments. Similarly, compared to non-match days, alcohol-related thefts and robberies (property-related offences) increase by 10\%,95\% CI [1\%--19\%], when the tournament is on, and by 29\%, 95\% CI [0\%--66\%], when England wins, although these estimates are not very precise (demonstrated by the width of the confidence intervals), due to the relatively small number of alcohol-related theft and robbery cases. In contrast, the effect of an England win on alcohol-related cases clearly extends to other, non-domestic violent offences, resulting in a 47\%, 95\% CI [19\%--83\%], increase compared to non-match days. While it is possible that misclassified domestic abuse cases contribute to this result (e.g, if the victim chooses not to disclose any relationship to the offender), these results suggests that the increase in alcohol-related violence following an England victory is not limited to domestic settings.
 
 
 
